# chkapr

./: Cargo.toml  README.md  justfile
src/: chkapr.rs  main.rs
src/chkapr/: github.rs  github_repository.rs
tests/fixtures/: test_data.json
