[package]
name = "chkapr"
version = "0.1.0"
authors = ["m3y <ma3ya.ozw+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.32"
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
